# bridge-x-rag

./: .gitignore  Generate_SecureKeys.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_keys.py  init-letsencrypt.sh  llm_finetuning.ipynb
src/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-readme.md  entrypoint.dev.sh  entrypoint.sh  pyproject.toml
src/app/: dependencies.py  exception_handlers.py  logging.py  main.py  testing_vectordb.py
src/app/auth/: utils.py
src/app/controllers/: AssetController.py  BaseController.py  DataController.py  KnowledgeBaseController.py  NLPController.py  ProcessController.py  ProcessingController.py  ProjectController.py  __init__.py
src/app/core/: logging.py
src/app/db/: mongodb.py
src/app/dependencies/: api_key.py  database.py  session_token.py
src/app/helpers/: config.py
src/app/middleware/: logging.py
src/app/models/: ApiKeyModel.py  AssetModel.py  BaseDataModel.py  ChatSessionModel.py  ChunkModel.py  KnowledgeBaseModel.py  ProjectModel.py  UserModel.py  __init__.py
src/app/models/db_schemas/: __init__.py  asset.py  data_chunk.py  knowledge_base.py  project.py
src/app/models/db_schemes/: data_chunk.py  project.py  user.py
src/app/models/enums/: DataBaseEnum.py  ErrorTypes.py  ProcessingEnum.py  ResponseEnums.py
src/app/prompt_templates/: template_parser.py
src/app/routes/: __init__.py  admin.py  auth.py  base.py  chat.py  data.py  nlp.py
src/app/routes/assets/: __init__.py  crud.py  processing.py  schemas.py  service.py
src/app/utils/: datetime_utils.py  nlp_init.py  nltk_processor.py  query_rewriter.py
(+55 files in other folders)
